[package]
name = "pubport"
version = "0.2.0"
edition = "2021"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
# Bitcoin
bitcoin = "0.32"
miniscript = { version = "12.0", features = [] }
secp256k1 = "0.29"

# errors
thiserror = "1.0"

# logging
log = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# utils
derive_more = {version = "1.0", features = ["display" ]}

## optional
# ffi
uniffi = { version = "0.28", optional = true }
