[package]
name = "pubport"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = "A library for parsing hardware wallet export formats"

repository = "https://github.com/bitcoinppl/pubport"
keywords = ["bitcoin"]

homepage = "https://github.com/bitcoinppl/pubport"
documentation = "https://docs.rs/pubport"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
miniscript = { version = "12.0", features = [] }

# errors
thiserror = "2.0"

# logging
log = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# util
derive_more = { version = "2.0", features = ["display"] }

# parsing
memchr = "2.7"

## optional
# ffi
uniffi = { version = "0.29", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
